# argparse

./: .gitignore  CMakeLists.txt  argparse.vcxproj  xmake.lua
include/argparse/: argparse.hpp
module/: argparse.ixx
test/: CMakeLists.txt  test-module-mixed.cpp  test-module.cpp  test-workaround.hpp  test_positional_arguments.cpp  test_prefix_chars.cpp  test_store_into.cpp  test_stringstream.cpp  test_subparsers.cpp  test_utility.hpp
